--- a/.config/wlogout/style.css
+++ b/.config/wlogout/style.css
@@ -1,5 +1,5 @@
 window {
-    font-family: JetBrains Mono NF Light;
+    font-family: JetBrains Mono Regular;
     font-size: 12pt;
     color: #cdd6f4; 
     background-color: rgba(30, 30, 46, 0.5);
@@ -11,20 +11,20 @@ button {
     background-position: center;
     background-size: 20%;
     border: none;
-    color: #ced7f4;
+    color: rgba(255,255,255, 0.7);
     text-shadow: none;
-    background-color: rgba(30, 30, 46, 0);
+    background-color: rgba(32,32,42, 0.5);
     margin: 0;
     transition: box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
 }
 
 button:hover {
-    background-color: rgba(49, 50, 68, 0.1);
+    background-color: #cdd6f4;
 }
 
 button:focus {
-    background-color: #7aa7f2;
-    color: #18182a;
+    background-color: #cdd6f4;
+    color: rgba(32,32,42,1);
     text-shadow: none;
 }
 
@@ -32,6 +32,10 @@ button:focus {
     background-image: image(url("./lock.png"));
 }
 #lock:focus {
+    background-image: image(url("./lock-hover.png"));
+}
+#lock:hover {
+    color: rgba(32,32,42,1);
     background-image: image(url("./lock-hover.png"));
 }
 
@@ -42,10 +46,19 @@ button:focus {
     background-image: image(url("./logout-hover.png"));
 }
 
+#logout:hover {
+    color: rgba(32,32,42,1);
+    background-image: image(url("./logout-hover.png"));
+}
+
 #suspend {
     background-image: image(url("./sleep.png"));
 }
 #suspend:focus {
+    background-image: image(url("./sleep-hover.png"));
+}
+#suspend:hover{
+    color: rgba(32,32,42,1);
     background-image: image(url("./sleep-hover.png"));
 }
 
@@ -55,10 +68,18 @@ button:focus {
 #shutdown:focus {
     background-image: image(url("./power-hover.png"));
 }
+#shutdown:hover {
+    color: rgba(32,32,42,1);
+    background-image: image(url("./power-hover.png"));
+}
 
 #reboot {
     background-image: image(url("./restart.png"));
 }
 #reboot:focus {
+    background-image: image(url("./restart-hover.png"));
+}
+#reboot:hover {
+    color: rgba(32,32,42,1);
     background-image: image(url("./restart-hover.png"));
 }
